# simple-subject-table

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Serialization.cpp  Serialization.h  Types.cpp  Types.h  adduser.cpp  adduser.h  adduser.ui  main.cpp  seed.cpp  seed.h  seed.ui  subjectmodel.cpp  subjectmodel.h  widget.cpp  widget.h  widget.ui
Common/: Types.cpp  Types.h
Crc32/: crc32.cpp  crc32.h
Dialog/: adduser.cpp  adduser.h  seed.cpp  seed.h
Model/: subjectmodel.cpp  subjectmodel.h
Serialization/: Serialization.cpp  Serialization.h
UI/: adduser.ui  seed.ui  widget.ui
